--- a/deployment-templates/deploy-forseti-server.yaml.in
+++ b/deployment-templates/deploy-forseti-server.yaml.in
@@ -70,6 +70,8 @@ resources:
     vpc-host-project-id: {VPC_HOST_PROJECT_ID}
     vpc-host-network: {VPC_HOST_NETWORK}
     vpc-host-subnetwork: {VPC_HOST_SUBNETWORK}
+    
+    matching_patches_query: {MATCHING_PATCHES_QUERY}
 
     # --- Forseti version
     # "forseti-version": Can be a tag or a branch.
@@ -77,6 +79,7 @@ resources:
     # See https://github.com/GoogleCloudPlatform/forseti-security/releases
     # for a list of releases.
     forseti-version: {FORSETI_VERSION}
+    xyz:
     src-path: https://github.com/GoogleCloudPlatform/forseti-security
     # --- end Forseti version
 
