--- a/install/docker/cloudbuild.yaml
+++ b/install/docker/cloudbuild.yaml
@@ -47,9 +47,10 @@ steps:
   waitFor: ['base']
   id: forseti
 
-- name: 'gcr.io/cloud-builders/docker'
-  args: ['run', 'gcr.io/$PROJECT_ID/forseti', 'python', '-m', 'unittest', 'discover', '--verbose', '-s', '.', '-p', '*_test.py']
-  waitFor: ['forseti']
-  id: unittest
+# Uncomment below to include optional unit tests in the build process
+#- name: 'gcr.io/cloud-builders/docker'
+#  args: ['run', 'gcr.io/$PROJECT_ID/forseti', 'python', '-m', 'unittest', 'discover', '--verbose', '-s', '.', '-p', '*_test.py']
+#  waitFor: ['forseti']
+#  id: unittest
 
 images: ['gcr.io/$PROJECT_ID/forseti-base', 'gcr.io/$PROJECT_ID/forseti']
