--- a/rules/retention_rules.yaml
+++ b/rules/retention_rules.yaml
@@ -40,3 +40,13 @@
 #           - some-bucket-name-2
 #     minimum_retention: 10
 #     maximum_retention: 200
+#   - name: Bigquery table in the 2 projects must have a retention between 15 and 20 days.
+#     applies_to:
+#       - bigquery_table
+#     resource:
+#       - type: project
+#         resource_ids:
+#           - some-project-name-1
+#           - some-project-name-2
+#     minimum_retention: 15
+#     maximum_retention: 20
