--- a/rules/resource_rules.yaml
+++ b/rules/resource_rules.yaml
@@ -11,7 +11,9 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-#
+
+# Note: `resource_id` must be an exact string or '*'. Partial string wildcards
+# are not currently supported.
 
 # rules:
 #   resource_types:
