--- a/configs/server/forseti_conf_server.yaml.sample
+++ b/configs/server/forseti_conf_server.yaml.sample
@@ -1,11 +1,5 @@
 global:
 
-    # Remove or comment out the email properties if you do not want Forseti to
-    # send email notifications.
-    email_recipient: EMAIL_RECIPIENT1,EMAIL_RECIPIENT2
-    email_sender: EMAIL_SENDER
-    sendgrid_api_key: SENDGRID_API_KEY
-
 ##############################################################################
 
 inventory:
@@ -218,6 +212,15 @@ scanner:
 
 notifier:
 
+    # Provide connector details
+    email_connector:
+      name: sendgrid
+      auth:
+        api_key: {SENDGRID_API_KEY}
+      sender: {EMAIL_SENDER}
+      recipient: {EMAIL_RECIPIENT}
+      data_format: csv
+
     # For every resource type you can set up a notification pipeline
     # to send alerts for every violation found
     resources:
@@ -226,12 +229,6 @@ notifier:
           notifiers:
             # Email violations
             - name: email_violations
-              configuration:
-                data_format: csv
-                sendgrid_api_key: ''
-                sender: ''
-                # Multiple recipients can be specified as comma-separated text.
-                recipient: ''
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -272,6 +269,4 @@ notifier:
         gcs_path: gs://MY_BUCKET/inventory_summary
       email_summary:
         enabled: true
-        sendgrid_api_key: SENDGRID_API_KEY
-        sender: EMAIL_SENDER
-        recipient: EMAIL_RECIPIENT1,EMAIL_RECIPIENT2
+
