Email Connector Interface Implementation (#2445)
* email connector implementation phase 1

* Email Connector Phase 2 development

* Added Exception and fixed pylint issues.

* updated as per new design

* Updated new location for sender and recipient

* Keeping email_summary in inventory in yaml as is

* trying to solve jinja issue

* appended notifier

* email adapter new design implementation completed

* fixed pylint issues

* added comments and fixed pylint issues

* It's backward compatible now, yay!

* Updated to send violations on emails when flag is set

* Updated test cases

* Fixed pylint errors.

* Updated test cases and alpha sorted imports.

* Added test cases for EmailFactory.

* Renamed email_connector_config to email_connector in config file.

* Clean up

* Better exception handling.

* Fixed pylint errors.

* Fix Email Adapter Tests (#2456)

* fix email tests

* tweak fake data

* fix another test

* fix test

* Moved sendgrid method to sendgrid_connector.py and modified config file.

* Updated InventorySummary to call EmailFactory instead of SendgridConnector.

* Raises Exception when notifier config not found.

* Removed blank line.

* Decomposed code.

* Further decomposed code.

* Optimized notifier.py.

* Python style check fix.

* Last few minor updates.

* updated doc.

* doc update

* doc update

* Update email_factory_test.py

* Update notifier_test.py

--- a/configs/server/forseti_conf_server.yaml.in
+++ b/configs/server/forseti_conf_server.yaml.in
@@ -1,11 +1,5 @@
 global:
 
-    # Remove or comment out the email properties if you do not want Forseti to
-    # send email notifications.
-    email_recipient: {EMAIL_RECIPIENT}
-    email_sender: {EMAIL_SENDER}
-    sendgrid_api_key: {SENDGRID_API_KEY}
-
 ##############################################################################
 
 inventory:
@@ -224,6 +218,15 @@ scanner:
 
 notifier:
 
+    # Provide connector details
+    email_connector:
+      name: sendgrid
+      auth:
+        api_key: ''
+      sender: ''
+      recipient: ''
+      data_format: csv
+
     # For every resource type you can set up a notification pipeline
     # to send alerts for every violation found
     resources:
@@ -232,11 +235,6 @@ notifier:
           notifiers:
             # Email violations
             - name: email_violations
-              configuration:
-                data_format: csv
-                sendgrid_api_key: {SENDGRID_API_KEY}
-                sender: {EMAIL_SENDER}
-                recipient: {EMAIL_RECIPIENT}
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -257,10 +255,6 @@ notifier:
           notifiers:
             # Email violations
             - name: email_violations
-              configuration:
-                sendgrid_api_key: {SENDGRID_API_KEY}
-                sender: {EMAIL_SENDER}
-                recipient: {EMAIL_RECIPIENT}
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -273,10 +267,6 @@ notifier:
           notifiers:
             # Email violations
             - name: email_violations
-              configuration:
-                sendgrid_api_key: {SENDGRID_API_KEY}
-                sender: {EMAIL_SENDER}
-                recipient: {EMAIL_RECIPIENT}
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -289,10 +279,6 @@ notifier:
           notifiers:
             # Email violations
             - name: email_violations
-              configuration:
-                sendgrid_api_key: {SENDGRID_API_KEY}
-                sender: {EMAIL_SENDER}
-                recipient: {EMAIL_RECIPIENT}
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -305,10 +291,6 @@ notifier:
           notifiers:
             # Email violations
             - name: email_violations
-              configuration:
-                sendgrid_api_key: {SENDGRID_API_KEY}
-                sender: {EMAIL_SENDER}
-                recipient: {EMAIL_RECIPIENT}
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -321,10 +303,6 @@ notifier:
           notifiers:
             # Email violations
             - name: email_violations
-              configuration:
-                sendgrid_api_key: {SENDGRID_API_KEY}
-                sender: {EMAIL_SENDER}
-                recipient: {EMAIL_RECIPIENT}
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -337,10 +315,6 @@ notifier:
           notifiers:
             # Email violations
             - name: email_violations
-              configuration:
-                sendgrid_api_key: {SENDGRID_API_KEY}
-                sender: {EMAIL_SENDER}
-                recipient: {EMAIL_RECIPIENT}
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -353,10 +327,6 @@ notifier:
           notifiers:
             # Email violations
             - name: email_violations
-              configuration:
-                sendgrid_api_key: {SENDGRID_API_KEY}
-                sender: {EMAIL_SENDER}
-                recipient: {EMAIL_RECIPIENT}
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -369,10 +339,6 @@ notifier:
           notifiers:
             # Email violations
             - name: email_violations
-              configuration:
-                sendgrid_api_key: {SENDGRID_API_KEY}
-                sender: {EMAIL_SENDER}
-                recipient: {EMAIL_RECIPIENT}
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -385,10 +351,6 @@ notifier:
           notifiers:
             # Email violations
             - name: email_violations
-              configuration:
-                sendgrid_api_key: {SENDGRID_API_KEY}
-                sender: {EMAIL_SENDER}
-                recipient: {EMAIL_RECIPIENT}
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -401,10 +363,6 @@ notifier:
           notifiers:
             # Email violations
             - name: email_violations
-              configuration:
-                sendgrid_api_key: {SENDGRID_API_KEY}
-                sender: {EMAIL_SENDER}
-                recipient: {EMAIL_RECIPIENT}
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -417,10 +375,6 @@ notifier:
           notifiers:
             # Email violations
             - name: email_violations
-              configuration:
-                sendgrid_api_key: {SENDGRID_API_KEY}
-                sender: {EMAIL_SENDER}
-                recipient: {EMAIL_RECIPIENT}
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -433,10 +387,6 @@ notifier:
           notifiers:
             # Email violations
             - name: email_violations
-              configuration:
-                sendgrid_api_key: {SENDGRID_API_KEY}
-                sender: {EMAIL_SENDER}
-                recipient: {EMAIL_RECIPIENT}
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -449,10 +399,6 @@ notifier:
           notifiers:
             # Email violations
             - name: email_violations
-              configuration:
-                sendgrid_api_key: {SENDGRID_API_KEY}
-                sender: {EMAIL_SENDER}
-                recipient: {EMAIL_RECIPIENT}
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -465,10 +411,6 @@ notifier:
           notifiers:
             # Email violations
             - name: email_violations
-              configuration:
-                sendgrid_api_key: {SENDGRID_API_KEY}
-                sender: {EMAIL_SENDER}
-                recipient: {EMAIL_RECIPIENT}
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -481,10 +423,6 @@ notifier:
           notifiers:
             # Email violations
             - name: email_violations
-              configuration:
-                sendgrid_api_key: {SENDGRID_API_KEY}
-                sender: {EMAIL_SENDER}
-                recipient: {EMAIL_RECIPIENT}
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -497,10 +435,6 @@ notifier:
           notifiers:
             # Email violations
             - name: email_violations
-              configuration:
-                sendgrid_api_key: {SENDGRID_API_KEY}
-                sender: {EMAIL_SENDER}
-                recipient: {EMAIL_RECIPIENT}
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -513,10 +447,6 @@ notifier:
           notifiers:
             # Email violations
             - name: email_violations
-              configuration:
-                sendgrid_api_key: {SENDGRID_API_KEY}
-                sender: {EMAIL_SENDER}
-                recipient: {EMAIL_RECIPIENT}
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -529,10 +459,6 @@ notifier:
           notifiers:
             # Email violations
             - name: email_violations
-              configuration:
-                sendgrid_api_key: {SENDGRID_API_KEY}
-                sender: {EMAIL_SENDER}
-                recipient: {EMAIL_RECIPIENT}
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -566,6 +492,3 @@ notifier:
         gcs_path: gs://{FORSETI_BUCKET}/inventory_summary
       email_summary:
         enabled: true
-        sendgrid_api_key: {SENDGRID_API_KEY}
-        sender: {EMAIL_SENDER}
-        recipient: {EMAIL_RECIPIENT}
