--- a/configs/server/forseti_conf_server.yaml.in
+++ b/configs/server/forseti_conf_server.yaml.in
@@ -222,9 +222,9 @@ notifier:
     email_connector:
       name: sendgrid
       auth:
-        api_key: ''
-      sender: ''
-      recipient: ''
+        api_key: {SENDGRID_API_KEY}
+      sender: {EMAIL_SENDER}
+      recipient: {EMAIL_RECIPIENT}
       data_format: csv
 
     # For every resource type you can set up a notification pipeline
