Client CLI container code

--- a/install/scripts/cloudsqlproxy.template.yaml
+++ b/install/scripts/cloudsqlproxy.template.yaml
@@ -15,7 +15,7 @@ spec:
       volumes:
         - name: google-cloud-key
           secret:
-            secretName: credentials
+            secretName: server-credentials
       containers:
         - name: cloudsql-proxy
           image: gcr.io/cloudsql-docker/gce-proxy:latest
