--- a/install/scripts/forsetiserverservice.yaml
+++ b/install/scripts/forsetiserverservice.yaml
@@ -8,5 +8,6 @@ spec:
   ports:
     - port: 50051
       protocol: TCP
+  clusterIP: 10.43.240.3
   selector:
-    app: forset-server
+    app: forseti-server
