Updated rules to include comments to clarify resource_ids.

--- a/rules/audit_logging_rules.yaml
+++ b/rules/audit_logging_rules.yaml
@@ -13,6 +13,8 @@
 # limitations under the License.
 
 # rules:
+#   # Note: Please use organization id, folder number and project id
+#   # when specifying resource ids.
 #   # example rules
 #   - name: 'Require AUDIT_READ on all services, with exemptions.'
 #     resource:
