--- a/rules/enabled_apis_rules.yaml
+++ b/rules/enabled_apis_rules.yaml
@@ -13,6 +13,8 @@
 # limitations under the License.
 
 # rules:
+#   # Note: Please use organization id, folder number and project id
+#   # when specifying resource ids.
 #   # example rules
 #   - name: Example Enabled APIs whitelist
 #     mode: whitelist
