--- a/rules/retention_rules.yaml
+++ b/rules/retention_rules.yaml
@@ -13,6 +13,8 @@
 # limitations under the License.
 
 # rules:
+#   # Note: Please use organization id, folder number and project id
+#   # when specifying resource ids.
 #   - name: Buckets in Organization must have a retention shorter than 730 days.
 #     applies_to:
 #       - bucket
