--- a/configs/server/forseti_conf_server.yaml.in
+++ b/configs/server/forseti_conf_server.yaml.in
@@ -410,6 +410,18 @@ notifier:
                 # gcs_path should begin with "gs://"
                 gcs_path: gs://{FORSETI_BUCKET}/scanner_violations
 
+        - resource: location_violations
+          should_notify: false
+          notifiers:
+            # Email violations
+#            - name: email_violations
+            # Upload violations to GCS.
+            - name: gcs_violations
+              configuration:
+                data_format: csv
+                # gcs_path should begin with "gs://"
+                gcs_path: gs://forseti-server-f6cc418/scanner_violations
+
         - resource: lien_violations
           should_notify: true
           notifiers:
