--- a/install/scripts/cloudsqlproxy.service.template.yaml
+++ b/install/scripts/cloudsqlproxy.service.template.yaml
@@ -8,6 +8,6 @@ spec:
   ports:
     - port: 3306
       protocol: TCP
-  clusterIP: 10.43.240.2
+  clusterIP: ${CLOUDSQL_IP}
   selector:
     app: cloudsqlproxy
