Client CLI container code

--- a/install/scripts/forseti.server.template.yaml
+++ b/install/scripts/forseti.server.template.yaml
@@ -20,7 +20,7 @@ spec:
         - name: forseti-server
           image: ${FORSETI_IMAGE}
           command: ["/forseti-security/install/scripts/docker_entrypoint.sh",
-                    "--bucket", "${BUCKET}",
+                    "--bucket", "${SERVER_BUCKET}",
                     "--log_level", "debug",
                     "--run_server",
                     "--services", "scanner model inventory explain notifier"]
