--- a/install/scripts/forseti.client.template.yaml
+++ b/install/scripts/forseti.client.template.yaml
@@ -20,7 +20,7 @@ spec:
         - name: forseti-client
           image: ${FORSETI_IMAGE}
           command: ["/forseti-security/install/scripts/docker_entrypoint.sh",
-                    "--bucket", "${BUCKET}",
+                    "--bucket", "${CLIENT_BUCKET}",
                     "--run_client"]
           securityContext:
             runAsUser: 0  # root user. TODO use 1, non-root as soon as practical
