--- a/rules/bigquery_rules.yaml
+++ b/rules/bigquery_rules.yaml
@@ -18,8 +18,8 @@
 #  violations.
 
 rules:
-  # Note: Please use organization id, folder number and project id
-  # when specifying resource ids.
+  # Note: please use the id of the resource (such as organization id,
+  # folder id, project id, etc.) when specifying the resource ids.
   - name: BigQuery rule to search for public datasets
     mode: blacklist
     resource:
