--- a/rules/cloudsql_rules.yaml
+++ b/rules/cloudsql_rules.yaml
@@ -13,8 +13,8 @@
 # limitations under the License.
 
 rules:
-  # Note: Please use organization id, folder number and project id
-  # when specifying resource ids.
+  # Note: please use the id of the resource (such as organization id,
+  # folder id, project id, etc.) when specifying the resource ids.
   - name: Cloud SQL rule to search for publicly exposed instances
     instance_name: '*'
     authorized_networks: '0.0.0.0/0'
