--- a/rules/enabled_apis_rules.yaml
+++ b/rules/enabled_apis_rules.yaml
@@ -13,8 +13,8 @@
 # limitations under the License.
 
 # rules:
-#   # Note: Please use organization id, folder number and project id
-#   # when specifying resource ids.
+#   # Note: please use the id of the resource (such as organization id,
+#   # folder id, project id, etc.) when specifying the resource ids.
 #   # example rules
 #   - name: Example Enabled APIs whitelist
 #     mode: whitelist
