--- a/rules/ke_scanner_rules.yaml
+++ b/rules/ke_scanner_rules.yaml
@@ -22,8 +22,8 @@
 # values: a list of values to blacklist/whitelist according to mode
 
 rules:
-  # Note: Please use organization id, folder number and project id
-  # when specifying resource ids.
+  # Note: please use the id of the resource (such as organization id,
+  # folder id, project id, etc.) when specifying the resource ids.
   - name: logging should be enabled
     resource:
       - type: project
