--- a/rules/service_account_key_rules.yaml
+++ b/rules/service_account_key_rules.yaml
@@ -20,8 +20,8 @@
 # max_age: The maximum age allowed for a service_account key in days
 
 rules:
-  # Note: Please use organization id, folder number and project id
-  # when specifying resource ids.
+  # Note: please use the id of the resource (such as organization id,
+  # folder id, project id, etc.) when specifying the resource ids.
   # The max allowed age of user managed service account keys (in days)
   - name: Service account keys not rotated
     resource:
