Updated rules to include comment to clarify resource_ids. (#2517)
* Updated rules to include comments to clarify resource_ids.

* addressed PR comments

--- a/rules/enabled_apis_rules.yaml
+++ b/rules/enabled_apis_rules.yaml
@@ -13,6 +13,8 @@
 # limitations under the License.
 
 # rules:
+#   # Note: please use the id of the resource (such as organization id,
+#   # folder id, project id, etc.) when specifying the resource ids.
 #   # example rules
 #   - name: Example Enabled APIs whitelist
 #     mode: whitelist
