--- a/rules/iam_rules.yaml
+++ b/rules/iam_rules.yaml
@@ -13,6 +13,8 @@
 # limitations under the License.
 
 rules:
+  # Note: please use the id of the resource (such as organization id,
+  # folder id, project id, etc.) when specifying the resource ids.
   # default rules
   - name: Allow only IAM members in my domain to be an OrgAdmin
     mode: whitelist
