--- a/rules/iap_rules.yaml
+++ b/rules/iap_rules.yaml
@@ -13,6 +13,8 @@
 # limitations under the License.
 
 rules:
+  # Note: please use the id of the resource (such as organization id,
+  # folder id, project id, etc.) when specifying the resource ids.
   # default rules
   - name: Forbid any IAP bypasses (when IAP is enabled)
     resource:
