--- a/rules/retention_rules.yaml
+++ b/rules/retention_rules.yaml
@@ -13,6 +13,8 @@
 # limitations under the License.
 
 # rules:
+#   # Note: please use the id of the resource (such as organization id,
+#   # folder id, project id, etc.) when specifying the resource ids.
 #   - name: Buckets in Organization must have a retention shorter than 730 days.
 #     applies_to:
 #       - bucket
