--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@
 protobuf==3.6.1
 grpcio==1.18.0
 grpcio-tools==1.18.0
-pyyaml>=4.2b1
+pyyaml==4.2b1
 googleapis-common-protos[grpc]==1.5.6
 google-cloud-asset==0.1.2
 
