--- a/configs/server/forseti_conf_server.yaml.in
+++ b/configs/server/forseti_conf_server.yaml.in
@@ -207,6 +207,8 @@ scanner:
           enabled: false
         - name: ke_version_scanner
           enabled: true
+        - name: kms_scanner
+          enabled: true
         - name: lien
           enabled: true
         - name: location
@@ -374,6 +376,18 @@ notifier:
                 # gcs_path should begin with "gs://"
                 gcs_path: gs://{FORSETI_BUCKET}/scanner_violations
 
+        - resource: kms_violations
+          should_notify: true
+          notifiers:
+            # Email violations
+            - name: email_violations
+            # Upload violations to GCS.
+            - name: gcs_violations
+              configuration:
+                data_format: csv
+                # gcs_path should begin with "gs://"
+                gcs_path: gs://{FORSETI_BUCKET}scanner_violations
+
         - resource: groups_violations
           should_notify: true
           notifiers:
@@ -409,18 +423,6 @@ notifier:
                 data_format: csv
                 # gcs_path should begin with "gs://"
                 gcs_path: gs://{FORSETI_BUCKET}/scanner_violations
-
-        - resource: location_violations
-          should_notify: false
-          notifiers:
-            # Email violations
-#            - name: email_violations
-            # Upload violations to GCS.
-            - name: gcs_violations
-              configuration:
-                data_format: csv
-                # gcs_path should begin with "gs://"
-                gcs_path: gs://forseti-server-f6cc418/scanner_violations
 
         - resource: lien_violations
           should_notify: true
