--- a/configs/server/forseti_conf_server.yaml.sample
+++ b/configs/server/forseti_conf_server.yaml.sample
@@ -6,9 +6,29 @@ global:
 
 inventory:
 
+    # You must set ONLY one of root_resource_id or composite_root in your
+    # configuration. Defining both will cause Forseti to exit with an error.
+
     # Root resource to start crawling from, formatted as
     # <resource_type>/<resource_id>, (e.g. "organizations/12345677890")
     root_resource_id: ROOT_RESOURCE_ID
+
+    # Composite root resources: combines multiple resource roots into a single
+    # inventory, for use across all Forseti modules. Can contain one or more
+    # resources from the GCP Resource Hierarchy in any combination.
+    # https://cloud.google.com/resource-manager/docs/cloud-platform-resource-hierarchy
+    #
+    # All resources must grant the appropriate IAM permissions to the Forseti
+    # service account before they can be included in the inventory.
+    #
+    # Forseti Explain is not supported with a composite root at this time.
+    # Resources can exist in multiple organizations.
+    #
+    #composite_root_resources:
+    #    - "folders/12345"
+    #    - "folders/45678"
+    #    - "projects/98765"
+    #    - "organizations/56789"
 
     # gsuite
     domain_super_admin_email: DOMAIN_SUPER_ADMIN_EMAIL
