KMS Scanner Implementation (#2507)
* adding basic methods

* Boilerplate code for KMS Scanner

* scan for rotation period of crypto key

* data retrieval

* checking if model data is retrieved

* Added kms scanner to the violation resources

* testing

* Data retrieval successful

* finding violations in progress

* saving violations

* Receiving violations

* working code

* clean up

* Update log_sink_scanner.py

* fixed pylint errors

* test cases

* test cases are working yay

* Fixed pylint error

* addressed comments

* changed id to name of crypto key

* Fixed pylint error

* fixed pytlint error

* addressed comment

* renamed variable

--- a/configs/server/forseti_conf_server.yaml.in
+++ b/configs/server/forseti_conf_server.yaml.in
@@ -207,6 +207,8 @@ scanner:
           enabled: false
         - name: ke_version_scanner
           enabled: true
+        - name: kms_scanner
+          enabled: true
         - name: lien
           enabled: true
         - name: location
@@ -373,6 +375,18 @@ notifier:
                 data_format: csv
                 # gcs_path should begin with "gs://"
                 gcs_path: gs://{FORSETI_BUCKET}/scanner_violations
+
+        - resource: kms_violations
+          should_notify: true
+          notifiers:
+            # Email violations
+            - name: email_violations
+            # Upload violations to GCS.
+            - name: gcs_violations
+              configuration:
+                data_format: csv
+                # gcs_path should begin with "gs://"
+                gcs_path: gs://{FORSETI_BUCKET}scanner_violations
 
         - resource: groups_violations
           should_notify: true
