--- a/configs/server/forseti_conf_server.yaml.in
+++ b/configs/server/forseti_conf_server.yaml.in
@@ -54,6 +54,10 @@ inventory:
           max_calls: 4
           period: 1.2
           disable_polling: False
+        groupssettings:
+          max_calls: 14
+          period: 1.0
+          disable_polling: False
         iam:
           max_calls: 90
           period: 1.0
